--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "crowdin-test",
+  "name": "next-intl-test",
   "version": "0.1.0",
+  "packageManager": "pnpm@8.7.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -12,9 +13,10 @@
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
-    "eslint": "8.48.0",
+    "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "next-intl": "2.20.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.2.2"
