--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -15,6 +15,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: crowdin/github-action@v1
+        with:
+          upload_sources: true
+          upload_translations: true
+          download_translations: true
+          localization_branch_name: l10n_crowdin_translations
+          create_pull_request: true
+          pull_request_title: New Crowdin Translations
+          pull_request_body: New Crowdin translations by [Crowdin GH Action](https://github.com/crowdin/github-action)
+          pull_request_base_branch_name: main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_PROJECT_ID }}
