--- a/.github/workflows/crowdin.yml
+++ b/.github/workflows/crowdin.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: crowdin/github-action@v1
+      - uses: crowdin/github-action@b0270b7fb2079c9421b32e30c0d88d9c06d59330
         with:
           upload_sources: true
           upload_translations: true
